--- a/contact.html
+++ b/contact.html
@@ -74,9 +74,9 @@
 
 	<section class="header-bg"></section>
 
-	<small class="is-comment header-note"><b><span class="is-emoji">&#x26a0;</span>Note:</b> This website uses mouse-over (hover) effects and is best viewed on a wider screen (&ge; 1024px).</small>
+	<small class="is-comment header-note is-hidden"><b><span class="is-emoji">&#x26a0;</span>Note:</b> This website uses mouse-over (hover) effects and is best viewed on a wider screen (&ge; 1024px). Since I build and maintain this personal website in my free time, it may not be perfect.</small>
 
-	<small class="is-comment header-note-connect"><b><span class="is-emoji">&#x1f4ac;</span>Connect:</b> Please <a rel="internal" href="/contact.html" class="path ahref-text is-reference">reach out to me via email</a>. You can stay updated on my latest research and work by following me on <a rel="internal" href="/contact.html#External-Links" class="path anchor ahref-text is-reference">social media</a> (including <a rel="external author" target="_blank" href="https://x.com/fvandervlist" class="ahref-text">&#x1d54f; (Twitter)</a>, <a rel="external author" target="_blank" href="https://bsky.app/profile/fvandervlist.bsky.social" class="ahref-text"><span class="is-emoji">&#x1f98b;</span>Bluesky</a>, <a rel="external author" target="_blank" href="https://www.linkedin.com/in/fvandervlist/" class="ahref-text">LinkedIn</a>), <a rel="external author" target="_blank" href="https://scholar.google.com/citations?user=vFkliXsAAAAJ" class="ahref-text"><span class="is-emoji">&#x1f393;</span>Google Scholar</a>, or by subscribing to <a rel="alternate" type="application/rss+xml" href="/Resources/feed.xml" class="path ahref-text">this website&rsquo;s RSS feed</a>.</small>
+	<small class="is-comment header-note-connect"><b><span class="is-emoji">&#x1f4ac;</span>Connect:</b> Please <a rel="internal" href="/contact.html#Card" class="path ahref-text is-reference">reach out to me via email</a>. You can stay updated on my latest research and work by following me on <a rel="internal" href="/contact.html#External-Links" class="path anchor ahref-text is-reference">social media</a> (including <a rel="external author" target="_blank" href="https://x.com/fvandervlist" class="ahref-text">&#x1d54f; (Twitter)</a>, <a rel="external author" target="_blank" href="https://bsky.app/profile/fvandervlist.bsky.social" class="ahref-text"><span class="is-emoji">&#x1f98b;</span>Bluesky</a>, <a rel="external author" target="_blank" href="https://www.linkedin.com/in/fvandervlist/" class="ahref-text">LinkedIn</a>), <a rel="external author" target="_blank" href="https://scholar.google.com/citations?user=vFkliXsAAAAJ" class="ahref-text"><span class="is-emoji">&#x1f393;</span>Google Scholar</a>, or by subscribing to <a rel="alternate" type="application/rss+xml" href="/Resources/feed.xml" class="path ahref-text">this website&rsquo;s <span class="is-emoji">&#x1f4eb;</span>RSS feed</a>.</small>
 
 	<header>
 		<p class="header-path">
@@ -85,16 +85,16 @@
 			<a rel="internal" href="/contact.html" class="path ahref-text">contact.html</a>
 		</p>
 		<p class="header-anchors">
-			<a rel="internal anchor" href="#Card" class="anchor anchor-is-reference ahref-text">&num;Card</a>
+			<a rel="internal anchor" href="#Card" class="anchor is-reference ahref-text">&num;Card</a>
 			<a rel="internal anchor" href="#Gallery" class="anchor ahref-text">&num;Gallery</a>
-			<a rel="internal anchor" href="#External-Links" class="anchor anchor-is-reference ahref-text">&num;External-Links</a>
+			<a rel="internal anchor" href="#External-Links" class="anchor is-reference ahref-text">&num;External-Links</a>
 		</p>
 		<hr class="solid" />
 	</header>
 
 	<main>
 		<section class="header-image" id="Header">
-			<img src="/Resources/images/fvandervlist/fvandervlist-phd-defence-ceremony%3Fmode%3Drgb%26w%3D1500%26res%3D72%26date%3D20220916.jpg" class="y2022" />
+			<img src="/Resources/images/fvandervlist/fvandervlist-phd-defence-ceremony%3Fmode%3Drgb%26w%3D1500%26res%3D72%26date%3D20220916.jpg" class="y2022 is-hidden" />
 		</section>
 		<section class="contact-card" id="Card">
 			<h3 class="istype-reference"><span class="is-emoji">&#x1f464; &#x1f4c7;</span><mark class="is-author">Dr. F.&hairsp;N. (Fernando) <b>van der Vlist</b></mark></h3>
@@ -124,6 +124,10 @@
 				<tr>
 					<th>&#x1d54f; (Twitter)</th>
 					<td id="Card-Twitter" onclick="copyEvent('Card-Twitter')" title="Click to copy &#x1d54f; (Twitter) handle to clipboard."><a rel="external author" target="_blank" href="https://x.com/fvandervlist" class="ahref-text">&#64;fvandervlist</a></td>
+				</tr>
+				<tr>
+					<th><span class="is-emoji">&#x1f98b;</span>Bluesky</th>
+					<td id="Card-Bluesky" onclick="copyEvent('Card-Bluesky')" title="Click to copy Bluesky handle to clipboard."><a rel="external author" target="_blank" href="https://bsky.app/profile/fvandervlist.bsky.social" class="ahref-text">&#64;fvandervlist.bsky.social</a></td>
 				</tr>
 			</table>
 		<hr class="solid" />
@@ -191,7 +195,7 @@
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> ORCID ID: <a rel="external author" target="_blank" href="https://orcid.org/0000-0003-1401-0325" class="ahref-text">0000-0003-1401-0325</a><br /></span>
 						<span class="td-link-expands">&boxur; <i>Linked to</i> Staff Profile: <a rel="external author" target="_blank" href="https://www.uva.nl/en/profile/f.n.vandervlist/" class="ahref-text">uva.nl/en/profile/f.n.vandervlist/</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/about.html" class="path ahref-text">About</a></td>
-					<td class="td-datemodified"><span class="is-date">2024-11-14</span></td>
+					<td class="td-datemodified"><span class="is-date">2024-11-15</span></td>
 					<td class="td-kind"></td>
 					<td class="td-access"></td>
 				</tr>
@@ -199,7 +203,7 @@
 					<td class="td-icon"><span class="is-emoji">&#x1f3de;</span></td>
 					<td class="td-link"><a rel="internal" href="/gallery.html" class="path ahref-text">gallery.html</a></td>
 					<td class="td-description"><a rel="internal" href="/gallery.html" class="path ahref-text">Gallery</a></td>
-					<td class="td-datemodified"></td>
+					<td class="td-datemodified"><span class="is-date">2024-11-15</span></td>
 					<td class="td-kind"></td>
 					<td class="td-access"></td>
 				</tr>
@@ -237,7 +241,7 @@
 			<span class="legend-field"><span class="legend-key">&#9679; </span>Legend:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
-				<span class="legend-value is-highlight"><span class="legend-key">&#9679; </span>pinned/highlight</span>
+				<span class="legend-value is-highlighted"><span class="legend-key">&#9679; </span>pinned/highlighted</span>
 				<span class="legend-value is-date"><span class="legend-key">&#9679; </span>latest/upcoming/date</span>
 				<span class="legend-value is-feature"><span class="legend-key">&#9679; </span>feature</span>
 				<span class="legend-value is-reference"><span class="legend-key">&#9679; </span>cite/reference</span>
@@ -265,7 +269,7 @@
 			</span>
 			&boxv;
 			<span class="legend-field"><span class="legend-key">&#x1f553; </span>Last modified:</span>
-			<span class="is-emoji">&#x1f553;</span><span class="is-date">November 14, 2024</span>
+			<span class="is-emoji">&#x1f553;</span><span class="is-date">November 15, 2024</span>
 		</p>
 	</footer>
 
