--- a/design/distributed-narratives-multiple-views.html
+++ b/design/distributed-narratives-multiple-views.html
@@ -68,7 +68,7 @@
 
 	<section class="header-bg"></section>
 
-	<small class="is-comment header-note"><b><span class="is-emoji">&#x26a0;</span>Note:</b> This website uses mouse-over (hover) effects and is best viewed on a wider screen (&ge; 1024px).</small>
+	<small class="is-comment header-note is-hidden"><b><span class="is-emoji">&#x26a0;</span>Note:</b> This website uses mouse-over (hover) effects and is best viewed on a wider screen (&ge; 1024px). Since I build and maintain this personal website in my free time, it may not be perfect.</small>
 
 	<header>
 		<p class="header-path">
@@ -221,7 +221,7 @@
 			<span class="legend-field"><span class="legend-key">&#9679; </span>Legend:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
-				<span class="legend-value is-highlight"><span class="legend-key">&#9679; </span>pinned/highlight</span>
+				<span class="legend-value is-highlighted"><span class="legend-key">&#9679; </span>pinned/highlighted</span>
 				<span class="legend-value is-date"><span class="legend-key">&#9679; </span>latest/upcoming/date</span>
 				<span class="legend-value is-feature"><span class="legend-key">&#9679; </span>feature</span>
 				<span class="legend-value is-reference"><span class="legend-key">&#9679; </span>cite/reference</span>
