--- a/links-and-resources/index.html
+++ b/links-and-resources/index.html
@@ -68,7 +68,9 @@
 
 	<section class="header-bg"></section>
 
-	<small class="is-comment header-note"><b><span class="is-emoji">&#x26a0;</span>Note:</b> This website uses mouse-over (hover) effects and is best viewed on a wider screen (&ge; 1024px).</small>
+	<small class="is-comment header-note is-hidden"><b><span class="is-emoji">&#x26a0;</span>Note:</b> This website uses mouse-over (hover) effects and is best viewed on a wider screen (&ge; 1024px). Since I build and maintain this personal website in my free time, it may not be perfect.</small>
+
+	<small class="is-comment header-note-connect"><b><span class="is-emoji">&#x1f4ac;</span>Connect:</b> Please <a rel="internal" href="/contact.html#Card" class="path ahref-text is-reference">reach out to me via email</a>. You can stay updated on my latest research and work by following me on <a rel="internal" href="/contact.html#External-Links" class="path anchor ahref-text is-reference">social media</a> (including <a rel="external author" target="_blank" href="https://x.com/fvandervlist" class="ahref-text">&#x1d54f; (Twitter)</a>, <a rel="external author" target="_blank" href="https://bsky.app/profile/fvandervlist.bsky.social" class="ahref-text"><span class="is-emoji">&#x1f98b;</span>Bluesky</a>, <a rel="external author" target="_blank" href="https://www.linkedin.com/in/fvandervlist/" class="ahref-text">LinkedIn</a>), <a rel="external author" target="_blank" href="https://scholar.google.com/citations?user=vFkliXsAAAAJ" class="ahref-text"><span class="is-emoji">&#x1f393;</span>Google Scholar</a>, or by subscribing to <a rel="alternate" type="application/rss+xml" href="/Resources/feed.xml" class="path ahref-text">this website&rsquo;s <span class="is-emoji">&#x1f4eb;</span>RSS feed</a>.</small>
 
 	<header>
 		<p class="header-path">
@@ -457,7 +459,7 @@
 			<span class="legend-field"><span class="legend-key">&#9679; </span>Legend:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
-				<span class="legend-value is-highlight"><span class="legend-key">&#9679; </span>pinned/highlight</span>
+				<span class="legend-value is-highlighted"><span class="legend-key">&#9679; </span>pinned/highlighted</span>
 				<span class="legend-value is-date"><span class="legend-key">&#9679; </span>latest/upcoming/date</span>
 				<span class="legend-value is-feature"><span class="legend-key">&#9679; </span>feature</span>
 				<span class="legend-value is-reference"><span class="legend-key">&#9679; </span>cite/reference</span>
