--- a/research/how-partners-mediate-platform-power.html
+++ b/research/how-partners-mediate-platform-power.html
@@ -90,7 +90,7 @@
 
 	<section class="header-bg"></section>
 
-	<small class="is-comment header-note"><b><span class="is-emoji">&#x26a0;</span>Note:</b> This website uses mouse-over (hover) effects and is best viewed on a wider screen (&ge; 1024px).</small>
+	<small class="is-comment header-note is-hidden"><b><span class="is-emoji">&#x26a0;</span>Note:</b> This website uses mouse-over (hover) effects and is best viewed on a wider screen (&ge; 1024px). Since I build and maintain this personal website in my free time, it may not be perfect.</small>
 
 	<header>
 		<p class="header-path">
@@ -103,7 +103,7 @@
 		<p class="header-anchors">
 			<a rel="internal anchor" href="#Summary" class="anchor ahref-text">&num;Summary</a>
 			<a rel="internal anchor" href="#Gallery" class="anchor ahref-text">&num;Gallery</a>
-			<a rel="internal anchor" href="#Cite" class="anchor anchor-is-reference ahref-text">&num;Cite</a>
+			<a rel="internal anchor" href="#Cite" class="anchor is-reference ahref-text">&num;Cite</a>
 			<a rel="internal anchor" href="#Info" class="anchor ahref-text">&num;Info</a>
 			<a rel="internal anchor" href="#Relations" class="anchor ahref-text">&num;Relations</a>
 		</p>
@@ -283,7 +283,7 @@
 						<span class="td-link-expands">&boxvr; <i>Part of</i> e-ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/2213-7653" class="ahref-uri">2213-7653</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
-						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=3994747132579416724" class="ahref-text">scholar.google.com</a><br /></span></td>
+						<span class="td-link-expands is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=3994747132579416724" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/social-media-and-platform-historiography.html" class="path ahref-text">Social Media and Platform Historiography</a></td>
 					<td class="td-datemodified"><span class="is-date">2019-11-06</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f50d; Refereed">&#x1f4c4; &#x1f50d;</span>Research Article</td>
@@ -298,7 +298,7 @@
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> OSF DOI: <a rel="external" target="_blank" href="https://doi.org/10.17605/osf.io/47zyc" class="ahref-uri">10.17605/osf.io/47zyc</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
-						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=8650465290621024981,8317138454142521878" class="ahref-text">scholar.google.com</a><br /></span></td>
+						<span class="td-link-expands is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=8650465290621024981,8317138454142521878" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/facebooks-evolution.html" class="path ahref-text">Facebook&rsquo;s Evolution</a></td>
 					<td class="td-datemodified"><span class="is-date">2019-05-01</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f50d; Refereed">&#x1f4c4; &#x1f50d;</span>Research Article</td>
@@ -336,7 +336,7 @@
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> OSF DOI: <a rel="external" target="_blank" href="https://doi.org/10.17605/osf.io/47zyc" class="ahref-uri">10.17605/osf.io/47zyc</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Version of</i> DOI: <a rel="external" target="_blank" href="https://doi.org/10.1080/24701475.2019.1593667" class="ahref-uri">10.1080/24701475.2019.1593667</a><br /></span>
-						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=12925179028009305858" class="ahref-text">scholar.google.com</a><br /></span></td>
+						<span class="td-link-expands is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=12925179028009305858" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/the-political-economy-of-social-data.html" class="path ahref-text">The Political Economy of Social Data</a></td>
 					<td class="td-datemodified"><span class="is-date">2017-07-28</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f50d; Refereed">&#x1f4c4; &#x1f50d;</span>Conference Proceeding</td>
@@ -360,7 +360,7 @@
 			<span class="legend-field"><span class="legend-key">&#9679; </span>Legend:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
-				<span class="legend-value is-highlight"><span class="legend-key">&#9679; </span>pinned/highlight</span>
+				<span class="legend-value is-highlighted"><span class="legend-key">&#9679; </span>pinned/highlighted</span>
 				<span class="legend-value is-date"><span class="legend-key">&#9679; </span>latest/upcoming/date</span>
 				<span class="legend-value is-feature"><span class="legend-key">&#9679; </span>feature</span>
 				<span class="legend-value is-reference"><span class="legend-key">&#9679; </span>cite/reference</span>
