--- a/research/regramming-the-platform.html
+++ b/research/regramming-the-platform.html
@@ -86,7 +86,7 @@
 
 	<section class="header-bg"></section>
 
-	<small class="is-comment header-note"><b><span class="is-emoji">&#x26a0;</span>Note:</b> This website uses mouse-over (hover) effects and is best viewed on a wider screen (&ge; 1024px).</small>
+	<small class="is-comment header-note is-hidden"><b><span class="is-emoji">&#x26a0;</span>Note:</b> This website uses mouse-over (hover) effects and is best viewed on a wider screen (&ge; 1024px). Since I build and maintain this personal website in my free time, it may not be perfect.</small>
 
 	<header>
 		<p class="header-path">
@@ -99,7 +99,7 @@
 		<p class="header-anchors">
 			<a rel="internal anchor" href="#Summary" class="anchor ahref-text">&num;Summary</a>
 			<a rel="internal anchor" href="#Gallery" class="anchor ahref-text">&num;Gallery</a>
-			<a rel="internal anchor" href="#Cite" class="anchor anchor-is-reference ahref-text">&num;Cite</a>
+			<a rel="internal anchor" href="#Cite" class="anchor is-reference ahref-text">&num;Cite</a>
 			<a rel="internal anchor" href="#Info" class="anchor ahref-text">&num;Info</a>
 			<a rel="internal anchor" href="#Relations" class="anchor ahref-text">&num;Relations</a>
 		</p>
@@ -285,7 +285,7 @@
 						<span class="td-link-expands">&boxvr; <i>Part of</i> e-ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/2056-3051" class="ahref-uri">2056-3051</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
-						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=661033894932760775" class="ahref-text">scholar.google.com</a><br /></span></td>
+						<span class="td-link-expands is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=661033894932760775" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/multi-situated-app-studies.html" class="path ahref-text">Multi-Situated App Studies</a></td>
 					<td class="td-datemodified"><span class="is-date">2019-06-06</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f50d; Refereed">&#x1f4c4; &#x1f50d;</span>Research Article</td>
@@ -367,7 +367,7 @@
 						<span class="td-link-expands">&boxvr; <i>Part of</i> URL: <a rel="external" target="_blank" href="https://www.mediacoop.uni-siegen.de/en/annual-conference-2016/" class="ahref-text">mediacoop.uni-siegen.de</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Version of</i> URL: <a rel="external" target="_blank" href="http://computationalculture.net/regramming-the-platform/" class="ahref-text">computationalculture.net</a><br /></span>
-						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=6305338433930938677,6580519652477069352" class="ahref-text">scholar.google.com</a><br /></span></td>
+						<span class="td-link-expands is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=6305338433930938677,6580519652477069352" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/design/app-support-ecologies.html" class="path ahref-text">App Support Ecologies</a></td>
 					<td class="td-datemodified"><span class="is-date">2016-12-08</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f4c3; &#x1f4ca;</span>Conference Poster</td>
@@ -379,7 +379,7 @@
 						&boxvr; DOI: <a rel="external" target="_blank" href="https://doi.org/10.5210/spir.v6i0.8431" class="ahref-uri">10.5210/spir.v6i0.8431</a><br />
 						<span class="td-link-expands">&boxvr; <i>Part of</i> e-ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/2162-3317/" class="ahref-uri">2162-3317</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
-						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=11703184730133935,11948690153081333579" class="ahref-text">scholar.google.com</a><br /></span></td>
+						<span class="td-link-expands is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=11703184730133935,11948690153081333579" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/app-studies-conference-panel.html" class="path ahref-text">App Studies (Conference Panel)</a></td>
 					<td class="td-datemodified"><span class="is-date">2016-10-31</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f50d; Refereed">&#x1f4c4; &#x1f50d;</span>Conference Proceeding</td>
@@ -411,7 +411,7 @@
 			<span class="legend-field"><span class="legend-key">&#9679; </span>Legend:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
-				<span class="legend-value is-highlight"><span class="legend-key">&#9679; </span>pinned/highlight</span>
+				<span class="legend-value is-highlighted"><span class="legend-key">&#9679; </span>pinned/highlighted</span>
 				<span class="legend-value is-date"><span class="legend-key">&#9679; </span>latest/upcoming/date</span>
 				<span class="legend-value is-feature"><span class="legend-key">&#9679; </span>feature</span>
 				<span class="legend-value is-reference"><span class="legend-key">&#9679; </span>cite/reference</span>
