--- a/design/index.html
+++ b/design/index.html
@@ -68,7 +68,9 @@
 
 	<section class="header-bg"></section>
 
-	<small class="is-comment header-note"><b><span class="is-emoji">&#x26a0;</span>Note:</b> This website uses mouse-over (hover) effects and is best viewed on a wider screen (&ge; 1024px).</small>
+	<small class="is-comment header-note is-hidden"><b><span class="is-emoji">&#x26a0;</span>Note:</b> This website uses mouse-over (hover) effects and is best viewed on a wider screen (&ge; 1024px). Since I build and maintain this personal website in my free time, it may not be perfect.</small>
+
+	<small class="is-comment header-note-connect"><b><span class="is-emoji">&#x1f4ac;</span>Connect:</b> Please <a rel="internal" href="/contact.html#Card" class="path ahref-text is-reference">reach out to me via email</a>. You can stay updated on my latest research and work by following me on <a rel="internal" href="/contact.html#External-Links" class="path anchor ahref-text is-reference">social media</a> (including <a rel="external author" target="_blank" href="https://x.com/fvandervlist" class="ahref-text">&#x1d54f; (Twitter)</a>, <a rel="external author" target="_blank" href="https://bsky.app/profile/fvandervlist.bsky.social" class="ahref-text"><span class="is-emoji">&#x1f98b;</span>Bluesky</a>, <a rel="external author" target="_blank" href="https://www.linkedin.com/in/fvandervlist/" class="ahref-text">LinkedIn</a>), <a rel="external author" target="_blank" href="https://scholar.google.com/citations?user=vFkliXsAAAAJ" class="ahref-text"><span class="is-emoji">&#x1f393;</span>Google Scholar</a>, or by subscribing to <a rel="alternate" type="application/rss+xml" href="/Resources/feed.xml" class="path ahref-text">this website&rsquo;s <span class="is-emoji">&#x1f4eb;</span>RSS feed</a>.</small>
 
 	<header>
 		<p class="header-path">
@@ -236,7 +238,7 @@
 						<span class="td-link-expands">&boxvr; <i>Part of</i> URL: <a rel="external" target="_blank" href="https://www.mediacoop.uni-siegen.de/en/annual-conference-2016/" class="ahref-text">mediacoop.uni-siegen.de</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Version of</i> URL: <a rel="external" target="_blank" href="http://computationalculture.net/regramming-the-platform/" class="ahref-text">computationalculture.net</a><br /></span>
-						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=6305338433930938677,6580519652477069352" class="ahref-text">scholar.google.com</a><br /></span></td>
+						<span class="td-link-expands is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=6305338433930938677,6580519652477069352" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/design/app-support-ecologies.html" class="path ahref-text">App Support Ecologies</a></td>
 					<td class="td-datemodified"><span class="is-date">2016-12-08</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f4c3; &#x1f4ca;</span>Conference Poster</td>
@@ -492,7 +494,7 @@
 			<span class="legend-field"><span class="legend-key">&#9679; </span>Legend:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
-				<span class="legend-value is-highlight"><span class="legend-key">&#9679; </span>pinned/highlight</span>
+				<span class="legend-value is-highlighted"><span class="legend-key">&#9679; </span>pinned/highlighted</span>
 				<span class="legend-value is-date"><span class="legend-key">&#9679; </span>latest/upcoming/date</span>
 				<span class="legend-value is-feature"><span class="legend-key">&#9679; </span>feature</span>
 				<span class="legend-value is-reference"><span class="legend-key">&#9679; </span>cite/reference</span>
