--- a/research/api-governance.html
+++ b/research/api-governance.html
@@ -92,7 +92,7 @@
 
 	<section class="header-bg"></section>
 
-	<small class="is-comment header-note"><b><span class="is-emoji">&#x26a0;</span>Note:</b> This website uses mouse-over (hover) effects and is best viewed on a wider screen (&ge; 1024px).</small>
+	<small class="is-comment header-note is-hidden"><b><span class="is-emoji">&#x26a0;</span>Note:</b> This website uses mouse-over (hover) effects and is best viewed on a wider screen (&ge; 1024px). Since I build and maintain this personal website in my free time, it may not be perfect.</small>
 
 	<header>
 		<p class="header-path">
@@ -105,7 +105,7 @@
 		<p class="header-anchors">
 			<a rel="internal anchor" href="#Summary" class="anchor ahref-text">&num;Summary</a>
 			<a rel="internal anchor" href="#Gallery" class="anchor ahref-text">&num;Gallery</a>
-			<a rel="internal anchor" href="#Cite" class="anchor anchor-is-reference ahref-text">&num;Cite</a>
+			<a rel="internal anchor" href="#Cite" class="anchor is-reference ahref-text">&num;Cite</a>
 			<a rel="internal anchor" href="#Info" class="anchor ahref-text">&num;Info</a>
 			<a rel="internal anchor" href="#Relations" class="anchor ahref-text">&num;Relations</a>
 		</p>
@@ -271,8 +271,8 @@
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> URL: <a rel="external" target="_blank" href="https://www.cais.nrw/arbeitsgemeinschaften/data-sharing-troubles/" class="ahref-text">cais.nrw</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Version of</i> DOI: <a rel="external" target="_blank" href="https://doi.org/10.25819/ubsi/9951" class="ahref-uri">10.25819/ubsi/9951</a><br /></span>
-						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=5654900258329147784" class="ahref-text">scholar.google.com</a><br /></span></td>
+						<span class="td-link-expands">&boxvr; <i>Version of</i> DOI: <a rel="external" target="_blank" href="https://doi.org/10.25819/ubsi/9951" class="ahref-uri">10.25819/ubsi/9951</a><br /></span>
+						<span class="td-link-expands is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=5654900258329147784" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description">The Governance of Facebook Platform</td>
 					<td class="td-datemodified"><span class="is-date">2021-09-16</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f50d; Refereed">&#x1f4c4; &#x1f50d;</span>Conference Proceeding</td>
@@ -300,8 +300,8 @@
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> URL: <a rel="external" target="_blank" href="https://www.cais.nrw/arbeitsgemeinschaften/data-sharing-troubles/" class="ahref-text">cais.nrw</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Version of</i> DOI: <a rel="external" target="_blank" href="https://doi.org/10.1177/20563051221086228" class="ahref-uri">10.1177/20563051221086228</a><br /></span>
-						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=3901627134367855950,16895441289677319109" class="ahref-text">scholar.google.com</a><br /></span></td>
+						<span class="td-link-expands">&boxvr; <i>Version of</i> DOI: <a rel="external" target="_blank" href="https://doi.org/10.1177/20563051221086228" class="ahref-uri">10.1177/20563051221086228</a><br /></span>
+						<span class="td-link-expands is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=3901627134367855950,16895441289677319109" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/the-technicity-of-platform-governance.html" class="path ahref-text">The Technicity of Platform Governance</a></td>
 					<td class="td-datemodified"><span class="is-date">2021-07-23</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f4c4;</span>Working Paper</td>
@@ -316,7 +316,7 @@
 						<span class="td-link-expands">&boxvr; <i>Part of</i> e-ISBN: <a rel="external" target="_blank" href="https://www.worldcat.org/isbn/9783030632915/" class="ahref-uri">978-3-030-63291-5</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a><br /></span>
-						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=12574962342012756774" class="ahref-text">scholar.google.com</a><br /></span></td>
+						<span class="td-link-expands is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=12574962342012756774" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/platform-and-app-histories.html" class="path ahref-text">Platform and App Histories</a></td>
 					<td class="td-datemodified"><span class="is-date">2021-07-01</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f4c4; &#x1f4d7;</span>Book Section</td>
@@ -345,7 +345,7 @@
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Version of</i> DOI: <a rel="external" target="_blank" href="https://doi.org/10.25819/ubsi/9951" class="ahref-uri">10.25819/ubsi/9951</a><br /></span>
-						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=16223468019386205245" class="ahref-text">scholar.google.com</a><br /></span></td>
+						<span class="td-link-expands is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=16223468019386205245" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description">The Evolution of Facebook&rsquo;s Graph API</td>
 					<td class="td-datemodified"><span class="is-date">2020-10-05</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f50d; Refereed">&#x1f4c4; &#x1f50d;</span>Conference Proceeding</td>
@@ -368,7 +368,7 @@
 						<span class="td-link-expands">&boxvr; <i>Part of</i> e-ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/2213-7653" class="ahref-uri">2213-7653</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
-						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=3994747132579416724" class="ahref-text">scholar.google.com</a><br /></span></td>
+						<span class="td-link-expands is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=3994747132579416724" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/social-media-and-platform-historiography.html" class="path ahref-text">Social Media and Platform Historiography</a></td>
 					<td class="td-datemodified"><span class="is-date">2019-11-06</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f50d; Refereed">&#x1f4c4; &#x1f50d;</span>Research Article</td>
@@ -383,7 +383,7 @@
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> OSF DOI: <a rel="external" target="_blank" href="https://doi.org/10.17605/osf.io/47zyc" class="ahref-uri">10.17605/osf.io/47zyc</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
-						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=8650465290621024981,8317138454142521878" class="ahref-text">scholar.google.com</a><br /></span></td>
+						<span class="td-link-expands is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=8650465290621024981,8317138454142521878" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/facebooks-evolution.html" class="path ahref-text">Facebook&rsquo;s Evolution</a></td>
 					<td class="td-datemodified"><span class="is-date">2019-05-01</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f50d; Refereed">&#x1f4c4; &#x1f50d;</span>Research Article</td>
@@ -409,7 +409,7 @@
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> OSF DOI: <a rel="external" target="_blank" href="https://doi.org/10.17605/osf.io/47zyc" class="ahref-uri">10.17605/osf.io/47zyc</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Version of</i> DOI: <a rel="external" target="_blank" href="https://doi.org/10.1080/24701475.2019.1593667" class="ahref-uri">10.1080/24701475.2019.1593667</a><br /></span>
-						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=12925179028009305858" class="ahref-text">scholar.google.com</a><br /></span></td>
+						<span class="td-link-expands is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=12925179028009305858" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/the-political-economy-of-social-data.html" class="path ahref-text">The Political Economy of Social Data</a></td>
 					<td class="td-datemodified"><span class="is-date">2017-07-28</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f50d; Refereed">&#x1f4c4; &#x1f50d;</span>Conference Proceeding</td>
@@ -425,7 +425,7 @@
 			<span class="legend-field"><span class="legend-key">&#9679; </span>Legend:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
-				<span class="legend-value is-highlight"><span class="legend-key">&#9679; </span>pinned/highlight</span>
+				<span class="legend-value is-highlighted"><span class="legend-key">&#9679; </span>pinned/highlighted</span>
 				<span class="legend-value is-date"><span class="legend-key">&#9679; </span>latest/upcoming/date</span>
 				<span class="legend-value is-feature"><span class="legend-key">&#9679; </span>feature</span>
 				<span class="legend-value is-reference"><span class="legend-key">&#9679; </span>cite/reference</span>
